--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ body {
     gap: 8px;
 }
 
-.titulo h1,h2,h3 {
+.titulo h1,
+h2,
+h3 {
     color: #ff4d4d;
 }
 
@@ -35,7 +37,7 @@ body {
     position: relative;
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0px;
 }
 
 .timeline::after {
@@ -51,7 +53,7 @@ body {
 }
 
 .timeline-item {
-    padding: 10px 40px;
+    padding: 20px 10px;
     position: relative;
     width: 50%;
     box-sizing: border-box;
@@ -74,7 +76,6 @@ body {
     padding: 10px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 .timeline-content h3 {
@@ -85,6 +86,22 @@ body {
 .timeline-content p {
     color: black;
     margin-bottom: 0;
+}
+
+.timeline-content p:first-of-type {
+    font-weight: bold;
+    font-style: italic;
+}
+
+.timeline-content p:nth-of-type(2) {
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    /* Fonte "fofinha" (como Comic Sans) */
+    font-weight: 300;
+    /* Peso leve */
+    color: #666;
+    /* Cor mais suave */
+    line-height: 1.4;
+    /* Espaçamento maior entre linhas */
 }
 
 .left {
